@@ -36,6 +36,8 @@
 	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
 	13107 Western_Outlaw:		Need correct HIT and ASPD Rate
 ========================
+08/15
+	* Added Critical Wounds to Anubis's skills [Playtester]
 08/14
 	* Rev. 11015 Added Autocast of Greed to Lesser Elemental Ring. [L0ne_W0lf]
 	* Rev. 11011 Changed the rest of the Western_Outlaw bonus. (/3 -> /6) [L0ne_W0lf]
